# Trab3ML---Rede-neural

./: .gitignore  README.md  README_mujoco.md  humanoide.py  main.py  pyproject.toml  rascunho.md
docs/: rascunho.md  testar.md
runs_boas/sac_Humanoid-v5_2026-07-07_11h07m38s/: final_model.pt
sac_mujoco_humanoid/: buffer.py  enjoy.py  environment.py  model.py
sac_mujoco_humanoid/runs_boas/sac_Humanoid-v5_2026-07-06_17h17m04s/: final_model.pt
src/: agent.py  analyze_correlations.py  compare.py  compare_results.csv  compare_results_alteracoes.csv  compare_results_v2.csv  config.yaml  enjoy.py  environment.py  export.py  model.py  plot_training.py  train.py  utils.py
src/runs/sac_Humanoid-v5_2026-07-06_14h05m35s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-06_17h17m04s/: config.yaml
src/runs/sac_Humanoid-v5_2026-07-07_08h12m39s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-07_11h07m38s/: config.yaml
src/runs/sac_Humanoid-v5_2026-07-08_15h30m51s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-08_22h32m06s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-09_10h15m25s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-09_15h57m29s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-10_15h15m20s/: config.yaml
src/runs/sac_Humanoid-v5_2026-07-10_15h18m14s/: final_model.pt
src/runs/sac_Humanoid-v5_2026-07-10_15h18m17s/: config.yaml  final_model.pt
src/runs/sac_Humanoid-v5_2026-07-11_13h09m36s/: config.yaml  final_model.pt  training_history.csv
(+5 files in other folders)
